Align auth/admin frontend flows with backend APIs and secure admin routes